[package]
name = "peachps"
version = "0.1.0"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"
links = "setup_tap_device"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
thiserror = "1.0.23"
structopt = "0.3"

[build-dependencies]
cc = "1.0"
